--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,11 @@
 name=AsyncHTTPClientLight
-version=2.3.0
+version=2.0.0.evolution
 author=Copida Soft
 maintainer=Copida Soft [copida.soft@gmail.com]
-sentence=Libreria HTTP asincrona per ESP32, con supporto a redirect, chunked transfer, header personalizzati e logging.
+sentence=Libreria HTTP asincrona e sincrona per ESP32, con supporto a redirect, chunked transfer, header personalizzati e logging.
 paragraph=Progettata per richieste GET/POST non bloccanti, perfetta per test, debugging e sniffing HTTP. Include un test server web minimale.
 category=Communication
 url=https://github.com/copida/AsyncHTTPClientLight
 architectures=esp32
+
 
